@@ -1,1 +1,1 @@
-DIST schedule-v6.0.2.tar.gz 41665 SHA256 2ea26c24688ace0595f9203f314ddeae7ad21f188e40d72b7707ade3385f5a9e SHA512 1e7a9384c192dd9d8f2cfbafdd641633acc642478480a14a0e8e2a972900642849ed11f4529057da1db72caa82030fe2062aca6567c3ad293f0b27c1ad7b6e8b WHIRLPOOL 816e498afbe40519c9d732896fca7528b56ab451f1d2fe91b7d74bb0fbdefa6b2f3a7a89241ec1d64fb73ce87f8db71291aaedad3c7254ab4037ea73f96d80d0
+DIST schedule-v6.1.0.tar.gz 42283 SHA256 e745fbcb7a8231492f61d346e937b052348df345c5e8d71ace08dfe8613dded0 SHA512 db267162d25629b7ddc84a289170786ab4f024470da8a78700ae48f829887bbcbbcb6d61d1a5836729a62a800079af8135f98f1cd0559be3c3e47c4bb8586924 WHIRLPOOL 2f94e12202b74c3642038bddc2d8d9fb81206acbdcd6ce5d057260b08e04277479992c62db968bc15661152da09104c5f17dfeb8ce5cbf825a8aac77be74ff12
