@@ -1,1 +1,1 @@
-DIST noscript-2.6.8.43.xpi 541099 SHA256 0d04c73a538d6f4842935d7fe5026cb0b676c2e7f58ed81193457ec4e4cd6392 SHA512 956e2f993358fef986deda068e64a8b388218697b09686e5e2c571d7d563856ba1e3d82633bd9f5916d259dd3078bb41d6774b8887fed21536eeacfcaf1fd782 WHIRLPOOL 8fb320736e523225eaa1a745a2d9d56c177420b72beb8a5781ca596aebe8d0c8bf7625a85196f58d4f4329ad14d62a1b86af2578ba4db10db4cae3721aa1cddd
+DIST noscript-2.6.9.xpi 542611 SHA256 7012268e33bbc13d27c9fe8836d53d50b0ce30cad15ab4de5f9b3c3d96b478b8 SHA512 35902d388a8aa57d9c70a78b3832cc6b9b53e49b92c1d021198bb09cd7f69eadfb3b89d74f6b39d88305508a7235a5378c5e489078942508d7d2b4b13565c81c WHIRLPOOL 935695398a1888a0aeebeb24eeab30400f351d9e2c6d53afc5c44cdd102a99f07ca881062653aedafd64e4739eae57a7c250b4b97b731ba76e647517c393ba0e
