@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*starter-6.1.0 (07 Oct 2014)
+
+  07 Oct 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+  New user/group schedule, /etc/schedule.password
+
 *starter-6.0.2 (20 Sep 2014)
 
   20 Sep 2014; Martin Väth <martin@mvath.de>:
